# PRCV-Project2-Content-Based-Image-Retrieval

./: .gitignore  CMakeLists.txt  README.md  package_release.bat
include/: distance.h  features.h
report/: Project 2  Content-based Image Retrieval Report.gdoc
src/: CMakeLists.txt  cbir.cpp  distance.cpp  features.cpp
src/gui/: cbir_gui.cpp
